Gerador/SimpleParser.py
# Generated from Simple.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleParser ( Parser ):

    grammarFileName = "Simple.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'or'", "'and'", "<INVALID>", "<INVALID>", 
                     "'PROGRAM'", "'VAR'", "'BEGIN'", "'END'", "'READ'", 
                     "'WRITE'", "'INTEGER'", "'REAL'", "'TEXTO'", "'WHILE'", 
                     "'DO'", "'IF'", "'THEN'", "'ELSE'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "';'", "'.'", "':'", "','", "'('", "')'", 
                     "':='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "WS", "PROGRAM", "VAR", "BEGIN", "END", "READ", "WRITE", 
                      "INTEGER", "REAL", "TEXTO", "WHILE", "DO", "IF", "THEN", 
                      "ELSE", "OPREL", "OPAD", "OPMULT", "PVIG", "PONTO", 
                      "DPONTOS", "VIG", "ABPAR", "FPAR", "ATRIB", "ID", 
                      "CTE", "CADEIA", "NUMERO_INTEIRO", "NUMERO_REAL", 
                      "NOT" ]

    RULE_programa = 0
    RULE_declaracao = 1
    RULE_declaracaoVar = 2
    RULE_declaracaoVarExplicita = 3
    RULE_tipo = 4
    RULE_comando = 5
    RULE_atribuicao = 6
    RULE_expressao = 7
    RULE_relacional = 8
    RULE_aditiva = 9
    RULE_multiplicativa = 10
    RULE_primaria = 11
    RULE_notCond = 12
    RULE_comandoLeitura = 13
    RULE_comandoEscrita = 14
    RULE_comandoRepeticao = 15
    RULE_cmdIf = 16
    RULE_cmdIfElse = 17

    ruleNames =  [ "programa", "declaracao", "declaracaoVar", "declaracaoVarExplicita", 
                   "tipo", "comando", "atribuicao", "expressao", "relacional", 
                   "aditiva", "multiplicativa", "primaria", "notCond", "comandoLeitura", 
                   "comandoEscrita", "comandoRepeticao", "cmdIf", "cmdIfElse" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    COMMENT=3
    WS=4
    PROGRAM=5
    VAR=6
    BEGIN=7
    END=8
    READ=9
    WRITE=10
    INTEGER=11
    REAL=12
    TEXTO=13
    WHILE=14
    DO=15
    IF=16
    THEN=17
    ELSE=18
    OPREL=19
    OPAD=20
    OPMULT=21
    PVIG=22
    PONTO=23
    DPONTOS=24
    VIG=25
    ABPAR=26
    FPAR=27
    ATRIB=28
    ID=29
    CTE=30
    CADEIA=31
    NUMERO_INTEIRO=32
    NUMERO_REAL=33
    NOT=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(SimpleParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def PVIG(self):
            return self.getToken(SimpleParser.PVIG, 0)

        def BEGIN(self):
            return self.getToken(SimpleParser.BEGIN, 0)

        def END(self):
            return self.getToken(SimpleParser.END, 0)

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(SimpleParser.DeclaracaoContext,i)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.ComandoContext)
            else:
                return self.getTypedRuleContext(SimpleParser.ComandoContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = SimpleParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(SimpleParser.PROGRAM)
            self.state = 37
            self.match(SimpleParser.ID)
            self.state = 38
            self.match(SimpleParser.PVIG)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 39
                self.declaracao()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 536954368) != 0):
                self.state = 45
                self.comando()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(SimpleParser.BEGIN)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 536954368) != 0):
                self.state = 52
                self.comando()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(SimpleParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SimpleParser.VAR, 0)

        def declaracaoVar(self):
            return self.getTypedRuleContext(SimpleParser.DeclaracaoVarContext,0)


        def declaracaoVarExplicita(self):
            return self.getTypedRuleContext(SimpleParser.DeclaracaoVarExplicitaContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = SimpleParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(SimpleParser.VAR)
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 61
                self.declaracaoVar()
                pass

            elif la_ == 2:
                self.state = 62
                self.declaracaoVarExplicita()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.ID)
            else:
                return self.getToken(SimpleParser.ID, i)

        def DPONTOS(self):
            return self.getToken(SimpleParser.DPONTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(SimpleParser.TipoContext,0)


        def PVIG(self):
            return self.getToken(SimpleParser.PVIG, 0)

        def VIG(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleParser.VIG)
            else:
                return self.getToken(SimpleParser.VIG, i)

        def getRuleIndex(self):
            return SimpleParser.RULE_declaracaoVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoVar" ):
                listener.enterDeclaracaoVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoVar" ):
                listener.exitDeclaracaoVar(self)




    def declaracaoVar(self):

        localctx = SimpleParser.DeclaracaoVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracaoVar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SimpleParser.ID)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 66
                self.match(SimpleParser.VIG)
                self.state = 67
                self.match(SimpleParser.ID)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self.match(SimpleParser.DPONTOS)
            self.state = 74
            self.tipo()
            self.state = 75
            self.match(SimpleParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoVarExplicitaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def DPONTOS(self):
            return self.getToken(SimpleParser.DPONTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(SimpleParser.TipoContext,0)


        def PVIG(self):
            return self.getToken(SimpleParser.PVIG, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_declaracaoVarExplicita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoVarExplicita" ):
                listener.enterDeclaracaoVarExplicita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoVarExplicita" ):
                listener.exitDeclaracaoVarExplicita(self)




    def declaracaoVarExplicita(self):

        localctx = SimpleParser.DeclaracaoVarExplicitaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracaoVarExplicita)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(SimpleParser.ID)
            self.state = 78
            self.match(SimpleParser.DPONTOS)
            self.state = 79
            self.tipo()
            self.state = 80
            self.match(SimpleParser.PVIG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(SimpleParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(SimpleParser.REAL, 0)

        def TEXTO(self):
            return self.getToken(SimpleParser.TEXTO, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = SimpleParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14336) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(SimpleParser.AtribuicaoContext,0)


        def PVIG(self):
            return self.getToken(SimpleParser.PVIG, 0)

        def comandoLeitura(self):
            return self.getTypedRuleContext(SimpleParser.ComandoLeituraContext,0)


        def comandoEscrita(self):
            return self.getTypedRuleContext(SimpleParser.ComandoEscritaContext,0)


        def comandoRepeticao(self):
            return self.getTypedRuleContext(SimpleParser.ComandoRepeticaoContext,0)


        def cmdIf(self):
            return self.getTypedRuleContext(SimpleParser.CmdIfContext,0)


        def cmdIfElse(self):
            return self.getTypedRuleContext(SimpleParser.CmdIfElseContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = SimpleParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comando)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.atribuicao()
                self.state = 85
                self.match(SimpleParser.PVIG)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.comandoLeitura()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.comandoEscrita()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.comandoRepeticao()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.cmdIf()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.cmdIfElse()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def ATRIB(self):
            return self.getToken(SimpleParser.ATRIB, 0)

        def expressao(self):
            return self.getTypedRuleContext(SimpleParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = SimpleParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SimpleParser.ID)
            self.state = 95
            self.match(SimpleParser.ATRIB)
            self.state = 96
            self.expressao(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relacional(self):
            return self.getTypedRuleContext(SimpleParser.RelacionalContext,0)


        def expressao(self):
            return self.getTypedRuleContext(SimpleParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)



    def expressao(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleParser.ExpressaoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expressao, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.relacional(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 107
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = SimpleParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 101
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 102
                        self.match(SimpleParser.T__0)
                        self.state = 103
                        self.relacional(0)
                        pass

                    elif la_ == 2:
                        localctx = SimpleParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 104
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 105
                        self.match(SimpleParser.T__1)
                        self.state = 106
                        self.relacional(0)
                        pass

             
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RelacionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aditiva(self):
            return self.getTypedRuleContext(SimpleParser.AditivaContext,0)


        def relacional(self):
            return self.getTypedRuleContext(SimpleParser.RelacionalContext,0)


        def OPREL(self):
            return self.getToken(SimpleParser.OPREL, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_relacional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelacional" ):
                listener.enterRelacional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelacional" ):
                listener.exitRelacional(self)



    def relacional(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleParser.RelacionalContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_relacional, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.aditiva(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SimpleParser.RelacionalContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_relacional)
                    self.state = 115
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 116
                    self.match(SimpleParser.OPREL)
                    self.state = 117
                    self.aditiva(0) 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AditivaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativa(self):
            return self.getTypedRuleContext(SimpleParser.MultiplicativaContext,0)


        def aditiva(self):
            return self.getTypedRuleContext(SimpleParser.AditivaContext,0)


        def OPAD(self):
            return self.getToken(SimpleParser.OPAD, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_aditiva

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAditiva" ):
                listener.enterAditiva(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAditiva" ):
                listener.exitAditiva(self)



    def aditiva(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleParser.AditivaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_aditiva, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.multiplicativa(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SimpleParser.AditivaContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_aditiva)
                    self.state = 126
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 127
                    self.match(SimpleParser.OPAD)
                    self.state = 128
                    self.multiplicativa(0) 
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MultiplicativaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaria(self):
            return self.getTypedRuleContext(SimpleParser.PrimariaContext,0)


        def multiplicativa(self):
            return self.getTypedRuleContext(SimpleParser.MultiplicativaContext,0)


        def OPMULT(self):
            return self.getToken(SimpleParser.OPMULT, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_multiplicativa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativa" ):
                listener.enterMultiplicativa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativa" ):
                listener.exitMultiplicativa(self)



    def multiplicativa(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleParser.MultiplicativaContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_multiplicativa, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.primaria()
            self._ctx.stop = self._input.LT(-1)
            self.state = 142
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SimpleParser.MultiplicativaContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicativa)
                    self.state = 137
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 138
                    self.match(SimpleParser.OPMULT)
                    self.state = 139
                    self.primaria() 
                self.state = 144
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrimariaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def CTE(self):
            return self.getToken(SimpleParser.CTE, 0)

        def NUMERO_INTEIRO(self):
            return self.getToken(SimpleParser.NUMERO_INTEIRO, 0)

        def NUMERO_REAL(self):
            return self.getToken(SimpleParser.NUMERO_REAL, 0)

        def ABPAR(self):
            return self.getToken(SimpleParser.ABPAR, 0)

        def expressao(self):
            return self.getTypedRuleContext(SimpleParser.ExpressaoContext,0)


        def FPAR(self):
            return self.getToken(SimpleParser.FPAR, 0)

        def NOT(self):
            return self.getToken(SimpleParser.NOT, 0)

        def notCond(self):
            return self.getTypedRuleContext(SimpleParser.NotCondContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_primaria

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaria" ):
                listener.enterPrimaria(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaria" ):
                listener.exitPrimaria(self)




    def primaria(self):

        localctx = SimpleParser.PrimariaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_primaria)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(SimpleParser.ID)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(SimpleParser.CTE)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 147
                self.match(SimpleParser.NUMERO_INTEIRO)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 4)
                self.state = 148
                self.match(SimpleParser.NUMERO_REAL)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.match(SimpleParser.ABPAR)
                self.state = 150
                self.expressao(0)
                self.state = 151
                self.match(SimpleParser.FPAR)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 6)
                self.state = 153
                self.match(SimpleParser.NOT)
                self.state = 154
                self.notCond()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NotCondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaria(self):
            return self.getTypedRuleContext(SimpleParser.PrimariaContext,0)


        def notCond(self):
            return self.getTypedRuleContext(SimpleParser.NotCondContext,0)


        def OPMULT(self):
            return self.getToken(SimpleParser.OPMULT, 0)

        def OPAD(self):
            return self.getToken(SimpleParser.OPAD, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_notCond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotCond" ):
                listener.enterNotCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotCond" ):
                listener.exitNotCond(self)




    def notCond(self):

        localctx = SimpleParser.NotCondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_notCond)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.primaria()
                self.state = 158
                _la = self._input.LA(1)
                if not(_la==20 or _la==21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 159
                self.notCond()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.primaria()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoLeituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(SimpleParser.READ, 0)

        def ABPAR(self):
            return self.getToken(SimpleParser.ABPAR, 0)

        def ID(self):
            return self.getToken(SimpleParser.ID, 0)

        def FPAR(self):
            return self.getToken(SimpleParser.FPAR, 0)

        def PVIG(self):
            return self.getToken(SimpleParser.PVIG, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_comandoLeitura
